--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,9 @@
 <!-- Display the static master list fragment -->
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/master_list_fragment"
+    xmlns:tools="http://schemas.android.com/tools"
     android:name="com.example.android.android_me.ui.MasterListFragment"
+    android:id="@+id/master_list_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    tools:layout="@layout/fragment_master_list" />
