--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -12,12 +12,12 @@
 
 <!-- GridView that displays AndroidMe images -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_masterlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <GridView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/images_grid_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -25,11 +25,11 @@
         android:adjustViewBounds="true"
         android:columnWidth="180dp"
         android:gravity="center"
-        android:horizontalSpacing="8dp"
+        android:horizontalSpacing="4dp"
         android:numColumns="3"
-        android:padding="16dp"
+        android:padding="0dp"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="8dp">
+        android:verticalSpacing="4dp">
     </GridView>
 
     <!-- The "Next" button -->
