--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,9 @@
     android:id="@+id/sw600dp_layout"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+
+    tools:context="ui.MainActivity">
 
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,47 +15,45 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="4dp"
+
         tools:layout="@layout/fragment_master_list" />
 
 
-    <ScrollView
+    <!-- LinearLayout for holding three Android-Me images -->
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
-        tools:context="com.example.android.android_me.ui.AndroidMeActivity">
+        android:id="@+id/android_me_linear_layout"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-        <!-- LinearLayout for holding three Android-Me images -->
-        <LinearLayout
-            android:id="@+id/android_me_linear_layout"
+        <!-- Three containers for each Android-Me body part -->
+        <!-- This container holds the head BodyPartFragment of the custom Android-Me image -->
+        <FrameLayout android:id="@+id/head_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="centerInside"/>
 
-            <!-- Three containers for each Android-Me body part -->
-            <!-- This container holds the head BodyPartFragment of the custom Android-Me image -->
-            <FrameLayout android:id="@+id/head_container"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="centerInside"/>
+        <!-- The remaining containers for the body and leg BodyPartFragments -->
+        <FrameLayout android:id="@+id/body_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="centerInside"/>
 
-            <!-- The remaining containers for the body and leg BodyPartFragments -->
-            <FrameLayout android:id="@+id/body_container"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="centerInside"/>
+        <FrameLayout android:id="@+id/leg_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="centerInside"/>
+    </LinearLayout>
 
-            <FrameLayout android:id="@+id/leg_container"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="centerInside"/>
-
-
-        </LinearLayout>
-
-    </ScrollView>
 </LinearLayout>
