--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,13 @@
 <!-- Display the static master list fragment -->
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/master_list_fragment"
     android:name="com.example.android.android_me.ui.MasterListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+
+    tools:layout="@layout/fragment_master_list" />
 
 <!-- DONE (1) Create a new two-pane activity_main layout for tablets (sw600dp)
 This means creating a new layout folder for tablet screens and another activity_main.xml -->
