--- a/app/src/main/res/layout/activity_android_me.xml
+++ b/app/src/main/res/layout/activity_android_me.xml
@@ -16,7 +16,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/android_me_linear_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
