--- a/app/src/main/res/layout/fragment_body_part.xml
+++ b/app/src/main/res/layout/fragment_body_part.xml
@@ -15,7 +15,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/body_part_image_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
 
     tools:src="@drawable/head1">
 
